Add Launch Primary Colour

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <style>
     :root {
       --primary-color: #067329;
+      --primary-dark: #055d26;
       --text: #333333;
       --bg: #ffffff;
       --card: #f9f9f9;
@@ -99,7 +100,7 @@
     }
 
     .launch-btn {
-      background-color: var(--primary);
+      background-color: var(--primary-color);
       color: white;
       border: none;
       padding: 8px 16px;
