--- a/index.html
+++ b/index.html
@@ -226,6 +226,23 @@
       font-size: 20px;
     }
 
+    #loader .spinner {
+  border: 8px solid #f3f3f3; /* Light grey background */
+  border-top: 8px solid var(--primary-color); /* Primary color for spinner */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
+/* Keyframes for spinner animation */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 @media (max-width: 768px) {
   .hamburger {
     display: none;
@@ -286,7 +303,7 @@
 
   <main>
     <div id="loader" style="display: none; text-align: center; margin-top: 20px;">
-      <p>Loading app...</p>
+       <div class="spinner"></div>
     </div>
 
     <section class="features">
