--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
   <section  class="features">
     <h2>About Activity Guide</h2>
-    <div class="feature-card">
+    <!-- <div class="feature-card"> -->
       <div class="feature-card">
         <h3>Why Activity Guide?</h3>
         <p>Activity Guide was developed by SmarterWay Solutions Ltd to address the need for structured project execution tools. Our experience in business development and tech innovation drove us to create a simple yet powerful platform for project managers.</p>
@@ -342,7 +342,7 @@
         <h3>Our Vision</h3>
         <p>We envision a world where every project, no matter the size, benefits from well-structured activity planning. Our goal is to empower teams with the tools they need to deliver successful outcomes efficiently.</p>
       </div>
-    </div>
+  <!--  </div> -->
   </section>
 
   <section class="footer">
