--- a/index.html
+++ b/index.html
@@ -280,6 +280,12 @@
         font-size: 18px;
       }
     }
+    @media (min-width: 1024px) {
+      .feature-cards {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
   </style>
 </head>
 <body>
